[package]
name = "ethstaker_bitcoin_tax_import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
fixed = { version = "1.27.0", features = ["serde", "std", "serde-str"] }
serde = { version = "1.0.197", features = ["derive"] }
